Fixed center with max-width, more readability changes

--- a/styles.css
+++ b/styles.css
@@ -58,8 +58,12 @@ margin: 0px 10px;
 p {
 font-family: Garamond, Georgia, sans-serif;
 font-size: 18px;
-margin-right: 20px;
 max-width: 34em;
+margin-left: auto;
+margin-right: auto;
+line-height: 1.5em;
+margin-bottom: 2em;
+word-spacing: 0.16em;
 }
 
 a {
@@ -78,7 +82,6 @@ align-self: flex-start;
 
 .header{
 background-color: darkred;
-text-align: center;
 padding: 1px;
 border-color: black;
 }
@@ -86,6 +89,9 @@ border-color: black;
 .header p{
 font-size: 46px;
 font-family: serif;
+text-align: center;
+margin-left: auto;
+margin-right: auto;
 color:lightgray;
 }
 
